# Hotel

./: CMakeLists.txt  System.c  System.h  main.c
database/: orderService.txt  staff.txt  users.txt
src/cli/: OrderCommand.c  OrderCommand.h  OrderRoomCommand.c  OrderRoomCommand.h  OrderServiceCommand.c  OrderServiceCommand.h  ServiceCommand.c  ServiceCommand.h  UserCommand.c  UserCommand.h
src/core/: Admin.database.c  Admin.database.h  Order.database.c  Order.database.h  OrderRoom.c  OrderRoom.h  OrderService.c  OrderService.h  Room.database.c  Room.database.h  Service.database.c  Service.database.h  Staff.database.c  Staff.database.h  User.database.c  User.database.h
src/core/entity/: admin.h  staff.h
src/utils/: CheckToken.c  CheckToken.h  Date.c  Date.h  FetchUsernameFromTokenFile.c  FetchUsernameFromTokenFile.h  ShowUserOrder.c  ShowUserOrder.h  generateUUID.c  generateUUID.h
